# rust-60fps-app

./: Cargo.toml  README.md  build-web.sh  index.html
src/: assets.rs  assets_manager.rs  main.rs  memory.rs
