[package]
name = "sixtyfps-memory-game"
version = "0.1.0"
authors = ["Rasmus Vermeulen <rasmus_vermeulen@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sixtyfps = "0.0.4"
rand = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.7", features = ["wasm-bindgen"] }

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]