[package]
name = "sixtyfps-apps"
version = "0.1.0"
authors = ["Rasmus Vermeulen <rasmus_vermeulen@tutanota.com>"]
edition = "2018"
default-run = "assets-manager"

[[bin]]
name = "memory"
path = "src/memory.rs"

[[bin]]
name = "assets-manager"
path = "src/assets_manager.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sixtyfps = "0.0.4"
rand = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.7", features = ["wasm-bindgen"] }

[lib]
name = "memory_web"
path = "src/memory.rs"
crate-type = ["cdylib"]